--- a/mongo.yaml
+++ b/mongo.yaml
@@ -1,38 +1,41 @@
-apiVersion: extension/v1beta1
+apiVersion: v1
 kind: Service
 metadata:
- labels:
+  labels:
+    name: mongo
   name: mongo
- name: mongo
 spec:
- ports:
-  - port: 27017
-    targetPort: 27017
- selector:
-  name: mongo
+  ports:
+    - port: 27017
+      targetPort: 27017
+  selector:
+    name: mongo
 ---
 apiVersion: extension/v1beta1
 kind: ReplicationController
 metadata:
- labels:
-  name: mongo
- name: mongo-controller
-spec:
- replicas:1
- template:
-  metadata:
-   labels:
+  labels:
     name: mongo
+  name: mongo-controller
+spec:
+  replicas:1
+  template:
+  metadata:
+    labels:
+      name: mongo
   spec:
-   containers:
-   - image: mongo
-     containerPort: 27017
-     hostPort: 27017
-   volumeMounts:
-     - name: mongo-persistent-storage
-       mountPath: /data/mongo
-  volumes:
-   - name: mongo-persistent-storage
-     hostPath:
-      path: /data
+    containers:
+    - image: mongo
+      name: mongo
+      ports:
+      - name: mongo
+        containerPort: 27017
+        hostPort: 27017
+      volumeMounts:
+      - name: mongo-persistent-storage
+        mountPath: /data/mongo
+    volumes:
+    - name: mongo-persistent-storage
+      hostPath:
+       path: /data
    
