--- a/nodejs.yaml
+++ b/nodejs.yaml
@@ -1,4 +1,4 @@
-apiVersion: extension/v1beta1
+apiVersion: v1
 kind: Service
 metadata:
   name: nodejs
@@ -13,7 +13,7 @@ spec:
   selector:
     name: nodejs
 ---
-apiVersion: extension/v1beta1
+apiVersion: v1
 kind: Deployment
 metadata:
   labels:
