--- a/mongo.yaml
+++ b/mongo.yaml
@@ -1,4 +1,4 @@
-apiVersion: v1
+apiVersion: extensions/v1beta1
 kind: Service
 metadata:
   labels:
@@ -11,8 +11,8 @@ spec:
   selector:
     name: mongo
 ---
-apiVersion: v1
-kind: Deployment
+apiVersion: extensions/v1beta1
+kind: ReplicaSet
 metadata:
   labels:
     name: mongo
