--- a/mongo.yaml
+++ b/mongo.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: v1
 kind: Service
 metadata:
   labels:
@@ -11,8 +11,8 @@ spec:
   selector:
     name: mongo
 ---
-apiVersion: extensions/v1beta1
-kind: ReplicaSet
+apiVersion: extension/v1beta1
+kind: Deployment
 metadata:
   labels:
     name: mongo
