--- a/mongo.yaml
+++ b/mongo.yaml
@@ -11,8 +11,8 @@ spec:
   selector:
     name: mongo
 ---
-apiVersion: extension/v1beta1
-kind: Deployment
+apiVersion: v1
+kind: ReplicationController
 metadata:
   labels:
     name: mongo
@@ -20,22 +20,21 @@ metadata:
 spec:
   replicas: 1
   template:
-  metadata:
-    labels:
-      name: mongo
-  spec:
-    containers:
-    - image: mongo
-      name: mongo
-      ports:
-      - name: mongo
-        containerPort: 27017
-        hostPort: 27017
-      volumeMounts:
-      - name: mongo-persistent-storage
-        mountPath: /data/mongo
-    volumes:
-    - name: mongo-persistent-storage
-      hostPath:
-       path: /data
-   
+    metadata:
+      labels:
+        name: mongo
+    spec:
+      containers:
+      - image: mongo
+        name: mongo
+        ports:
+        - name: mongo
+          containerPort: 27017
+          hostPort: 27017
+        volumeMounts:
+            - name: mongo-persistent-storage
+              mountPath: /data/db
+      volumes:
+        - name: mongo-persistent-storage
+          hostPath:
+            path: /data
