--- a/nodejs.yaml
+++ b/nodejs.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nodejs
+  name: node-cellar-svc
   labels:
-    name: nodejs
+    name: node-cellar
 spec:
   type: NodePort
   ports:
@@ -11,28 +11,27 @@ spec:
       targetPort: 3000
       protocol: TCP
   selector:
-    name: nodejs
+    name: node-cellar
 ---
 apiVersion: v1
-kind: Deployment
+kind: ReplicationController
 metadata:
   labels:
-    name: nodejs
-  name: nodejs-controller
+    name: node-cellar
+  name: noce-cellar-controller
 spec:
   replicas: 2
   selector:
-    name: nodejs
+    name: node-cellar
   template:
     metadata:
       labels:
-        name: nodejs
+        name: node-cellar
     spec:
       containers:
-      - image: node:0.10.40
-        command: ['/bin/sh', '-c']
-        args: ['cd /home && git clone https://github.com/ijason/NodeJS-Sample-App.git demo && cd demo/EmployeeDB/ && npm install && sed -i -- ''s/localhost/mongo/g'' app.js && node app.js']
-        name: nodejs
+      - image: sonvn/nodecellar
+        name: node-cellar
+        env: MONGO_HOST=mongo
         ports:
         - containerPort: 3000
-          name: http-server
+    
