--- a/cicd/nodecellar/Dockerfile
+++ b/cicd/nodecellar/Dockerfile
@@ -6,7 +6,7 @@ MAINTAINER sonvn
 RUN mkdir -p /usr/api
 COPY . /usr/api
 WORKDIR /usr/api
-#RUN npm install --product
+RUN npm install 
 
 ENV PORT 3000
 EXPOSE $PORT
