--- a/node-cellar.yaml
+++ b/node-cellar.yaml
@@ -29,7 +29,7 @@ spec:
         name: node-cellar
     spec:
       containers:
-      - image: sonvn/node-cellar-v10
+      - image: 10.84.20.62:8082/admin/node-cellar-v10
         name: node-cellar
         env: 
         - name: MONGO_HOST
