--- a/cicd/nodecellar/Dockerfile
+++ b/cicd/nodecellar/Dockerfile
@@ -8,7 +8,7 @@ USER root
 RUN mkdir -p /usr/api
 COPY . /usr/api
 WORKDIR /usr/api
-RUN npm install --production --nodedir=/usr/api/node-v6.11.1
+RUN npm install --production 
 
 ENV PORT 3000
 EXPOSE $PORT
