--- a/k8s-dashboard.yaml
+++ b/k8s-dashboard.yaml
@@ -77,7 +77,7 @@ spec:
           timeoutSeconds: 30
       serviceAccountName: kubernetes-dashboard
       nodeSelector:
-        nodetype=master
+        nodetype: master
       # Comment the following tolerations if Dashboard must not be deployed on master
       tolerations:
       - key: node-role.kubernetes.io/master
