--- a/k8s-dashboard.yaml
+++ b/k8s-dashboard.yaml
@@ -91,6 +91,7 @@ metadata:
   name: kubernetes-dashboard
   namespace: kube-system
 spec:
+  type: NodePort
   ports:
   - port: 80
     targetPort: 9090
