--- a/ump/ump-backend/pom.xml
+++ b/ump/ump-backend/pom.xml
@@ -55,6 +55,21 @@
             </plugin>
         </plugins>
     </build>
-
+  <repositories>
+    <repository>
+      <id>maven-group</id>
+      <url>http://10.84.20.62:8081/repository/maven-group/</url>
+    </repository>
+  </repositories>
+  <distributionManagement>
+    <snapshotRepository>
+      <id>nexus-snapshots</id>
+      <url>http://10.84.20.62:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
+    <repository>
+      <id>nexus-releases</id>
+      <url>http://10.84.20.62:8081/repository/maven-releases/</url>
+    </repository>
+  </distributionManagement>
 
 </project>
