--- a/dockerfile/ump/Dockerfile
+++ b/dockerfile/ump/Dockerfile
@@ -83,23 +83,22 @@ RUN wget https://www.rabbitmq.com/rabbitmq-signing-key-public.asc
 RUN apt-key add rabbitmq-signing-key-public.asc
 RUN apt-key adv --keyserver hkps.pool.sks-keyservers.net --recv-keys 0x6B73A36E6026DFCA
 RUN apt-get update
-RUN apt-get install -y rabbitmq-server python2.7
-RUN ln -s /usr/bin/python2.7 /usr/bin/python
+RUN apt-get install -y rabbitmq-server python2.7 \
+&& ln -s /usr/bin/python2.7 /usr/bin/python
 RUN cd /usr/sbin
 RUN rabbitmq-plugins enable rabbitmq_management
 RUN cd /opt/ && git clone https://github.com/quangkeu/ssdc-genieacs.git
 RUN service rabbitmq-server restart \
 && sleep 10s \
-&& curl -S http://localhost:15672/cli/rabbitmqadmin > /usr/sbin/rabbitmqadmin
-RUN chmod 777 /usr/sbin/rabbitmqadmin \
-&& sleep 5s
-RUN rabbitmqadmin -q import /opt/ssdc-genieacs/rabbit.config
+&& curl -S http://localhost:15672/cli/rabbitmqadmin > /usr/sbin/rabbitmqadmin \
+&& chmod 777 /usr/sbin/rabbitmqadmin \
+&& rabbitmqadmin -q import /opt/ssdc-genieacs/rabbit.config
 #RUN rabbitmqctl list_exchanges
 EXPOSE 5672
 EXPOSE 15672
 
 # Install Genienacs
-RUN cd /opt/ && rm -rf ssdc-genieacs && git clone https://github.com/quangkeu/ssdc-genieacs.git
+#RUN cd /opt/ && rm -rf ssdc-genieacs && git clone https://github.com/quangkeu/ssdc-genieacs.git
 RUN mkdir -p /home/ubuntu && mkdir -p /home/ubuntu/DeployGenieacs/logs
 RUN cd /opt/ssdc-genieacs \
 && tar -xzf genieacs.tar.gz \
