--- a/dockerfile/ump/Dockerfile
+++ b/dockerfile/ump/Dockerfile
@@ -13,17 +13,16 @@ RUN apt-get install -y nodejs
 
 EXPOSE 8888
 
-RUN \
-  apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 7F0CEB10 && \
-  echo 'deb http://downloads-distro.mongodb.org/repo/debian-sysvinit dist 10gen' > /etc/apt/sources.list.d/mongodb.list && \
-  apt-get update && \
-  apt-get install -y mongodb-org
+RUN apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv 7F0CEB10 \
+&& echo 'deb http://downloads-distro.mongodb.org/repo/debian-sysvinit dist 10gen' > /etc/apt/sources.list.d/mongodb.list \
+&& apt-get update \
+&& apt-get install -y mongodb-org
 
 RUN mkdir -p /data/db
 RUN echo "bind_ip = 0.0.0.0" >> /etc/mongodb.conf
 
 # Define mountable directories.
-VOLUME ["/data/db"]
+#VOLUME ["/data/db"]
 
 # Define working directory.
 #WORKDIR /data
