--- a/ump/ump-app.yaml
+++ b/ump/ump-app.yaml
@@ -31,5 +31,10 @@ spec:
         - name: ump-app
           containerPort: 8080
           hostPort: 8080
+        env:
+        - name: APP_TYPE
+          value: "webapp"
+        - name: APP_NAME
+          value: "ump-webapp-1.0-20170802.075505-1"
         command: ["/bin/sh","-c"]
-        args: ["/opt/ssdc-genieacs/entrypoint.sh","web-app","ump-webapp-1.0-20170802.075505-1"]
+        args: ["/opt/ssdc-genieacs/entrypoint.sh"]
