--- a/dockerfile/ump/Dockerfile
+++ b/dockerfile/ump/Dockerfile
@@ -88,10 +88,10 @@ RUN rabbitmq-plugins enable rabbitmq_management
 RUN cd /opt/ && git clone https://github.com/quangkeu/ssdc-genieacs.git
 
 RUN sudo service mysql restart && sleep 10s \
-&& mysql -uroot -proot -e "CREATE DATABASE ump;" 
-#&& mysql -uroot -proot -e "CREATE USER 'root'@'%' IDENTIFIED BY 'root';" \
-#&& mysql -uroot -proot -e "GRANT ALL PRIVILEGES ON *.* TO 'root'@'%';" \
-#&& mysql -uroot -proot -e "FLUSH PRIVILEGES;"
+&& mysql -uroot -proot -e "CREATE DATABASE ump;" \
+&& mysql -uroot -proot -e "CREATE USER 'root'@'%' IDENTIFIED BY 'root';" \
+&& mysql -uroot -proot -e "GRANT ALL PRIVILEGES ON *.* TO 'root'@'%';" \
+&& mysql -uroot -proot -e "FLUSH PRIVILEGES;"
 
 RUN service rabbitmq-server restart \
 && sleep 10s \
