--- a/ump/ump-build-source/Dockerfile
+++ b/ump/ump-build-source/Dockerfile
@@ -3,6 +3,7 @@ FROM ubuntu:14.04
 MAINTAINER QuangNL
 
 # Install git
+RUN apt-get update 
 RUN apt-get install -y git
 
 # Update the package repository
