--- a/dockerfile/ump/ump-runtime/Dockerfile
+++ b/dockerfile/ump/ump-runtime/Dockerfile
@@ -13,10 +13,10 @@ RUN echo "deb http://archive.ubuntu.com/ubuntu trusty main universe" > /etc/apt/
 RUN apt-get -y update
 
 # ---Install Oracle Java 8---
-RUN apt-get install software-properties-common python-software-properties
+RUN apt-get install -y software-properties-common python-software-properties
 RUN add-apt-repository ppa:openjdk-r/ppa
 RUN apt-get update
-RUN apt-get install openjdk-8-jdk openjdk-8-jre 
+RUN apt-get install -y openjdk-8-jdk openjdk-8-jre 
 RUN export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64/ 
 
 # ---Clean Up APT when finished---
