--- a/dockerfile/ump/ump-runtime/Dockerfile
+++ b/dockerfile/ump/ump-runtime/Dockerfile
@@ -83,8 +83,8 @@ RUN wget https://www.rabbitmq.com/rabbitmq-signing-key-public.asc
 RUN apt-key add rabbitmq-signing-key-public.asc
 RUN apt-key adv --keyserver hkps.pool.sks-keyservers.net --recv-keys 0x6B73A36E6026DFCA
 RUN apt-get update
-RUN apt-get install -y rabbitmq-server python2.7 \
-&& ln -s /usr/bin/python2.7 /usr/bin/python
+RUN apt-get install -y rabbitmq-server python2.7 
+#&& ln -s /usr/bin/python2.7 /usr/bin/python
 RUN cd /usr/sbin
 RUN rabbitmq-plugins enable rabbitmq_management
 RUN service rabbitmq-server restart \
