--- a/ump/ump-build-source/Dockerfile
+++ b/ump/ump-build-source/Dockerfile
@@ -9,11 +9,22 @@ apt-get update -y && \
 apt-get install -y git
 
 # Install Oracle Java 8
-RUN apt-get install software-properties-common python-software-properties -y && \
-add-apt-repository ppa:openjdk-r/ppa && \
-apt-get update -y && \
-apt-get install -y openjdk-8-jdk openjdk-8-jre && \
-export JAVA_HOME=/usr/lib/jvm/java-8-openjdk-amd64/ 
+ENV JAVA_VER 8
+ENV JAVA_HOME /usr/lib/jvm/java-8-oracle
+
+RUN echo 'deb http://ppa.launchpad.net/webupd8team/java/ubuntu trusty main' >> /etc/apt/sources.list && \
+    echo 'deb-src http://ppa.launchpad.net/webupd8team/java/ubuntu trusty main' >> /etc/apt/sources.list && \
+    apt-key adv --keyserver keyserver.ubuntu.com --recv-keys C2518248EEA14886 && \
+    apt-get update && \
+    echo oracle-java${JAVA_VER}-installer shared/accepted-oracle-license-v1-1 select true | /usr/bin/debconf-set-selections && \
+    apt-get install -y --force-yes --no-install-recommends oracle-java${JAVA_VER}-installer oracle-java${JAVA_VER}-set-default && \
+    apt-get clean && \
+    rm -rf /var/cache/oracle-jdk${JAVA_VER}-installer
+
+# Set Oracle Java as the default Java
+RUN update-java-alternatives -s java-8-oracle
+
+RUN echo "export JAVA_HOME=/usr/lib/jvm/java-8-oracle" >> ~/.bashrc
 
 # Clean Up APT when finished
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
